# snapclip

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: SPEC.md
src/snapclip/: __main__.py  app.py
tests/: manual_checklist.md
